@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR

Package Model {
Package Patient {
class Patient MODEL_COLOR {
}
class MedicalHistory MODEL_COLOR {
}
class MedicalHistory.MedicalEntry MODEL_COLOR {
}
}
}
Patient *-down-> "1"MedicalHistory MODEL_COLOR : contains >
MedicalHistory --> "0..*" MedicalHistory.MedicalEntry MODEL_COLOR : contains >

Package Logic <<Rectangle>> {

Package Parser {
class DeleteMedicalEntryCommandParser LOGIC_COLOR {
}
class "<<interface>>\nPatientParser" as PatientParser<DeleteMedicalEntryCommand> LOGIC_COLOR {
}
class PatientBookParser LOGIC_COLOR {
}
class AddressBookParser LOGIC_COLOR {
}
}

DeleteMedicalEntryCommandParser -up[dashed]-|> PatientParser
AddressBookParser *--> PatientBookParser
PatientBookParser -[dashed]-> DeleteMedicalEntryCommandParser : creates >

Package Command {
class PatientCommand LOGIC_COLOR {
}
class DeleteMedicalEntryCommand LOGIC_COLOR {
}
}
}

DeleteMedicalEntryCommand -up-|> PatientCommand

DeleteMedicalEntryCommandParser -down-> DeleteMedicalEntryCommand : creates >
DeleteMedicalEntryCommand -[dashed]-> "1"MedicalHistory.MedicalEntry : deletes >
note bottom on link: Reference is stored in\n the form of an Index
DeleteMedicalEntryCommand -[dashed]-> "1"Patient : modifies >
note bottom on link: Reference is stored in\n the form of an Index



@enduml
